--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,20 @@
   margin: 0px;
   z-index: 1; }
 
+.notification-warn-header {
+  height: 24px;
+  background-color: #f5d442;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  padding: none;
+  z-index: 10; }
+
+.notification-warn-header .notification-warn-header-content {
+  font-size: 16px;
+  padding-left: 5px;
+  padding-top: 5px;
+  color: black;
+  font-family: 'Open Sans', sans-serif; }
+
 .notification-header {
   height: 24px;
   background-color: #ff2f2f;
