--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,18 @@
     z-index: 1;
 
 }
+.notification-warn-header {
+  height: 24px;
+  background-color: rgb(245, 212, 66);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  padding: none;
+  z-index: 10; }
+  .notification-warn-header .notification-warn-header-content {
+    font-size: 16px;
+    padding-left: 5px;
+    padding-top: 5px;
+    color: black;
+    font-family: 'Open Sans', sans-serif; }
 
 .notification-header {
     height: 24px;
@@ -24,7 +36,7 @@
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
     padding: none;
     z-index: 10;
-    
+
     .notification-header-content {
         font-size: 16px;
         padding-left: 5px;
@@ -95,7 +107,7 @@ body, html {
     font-family: "Segoe MDL2 Assets";
     font-size: 20px;
   }
-  
+
 .window-controls .button {
     display: flex;
     justify-content: center;
@@ -110,7 +122,7 @@ body, html {
 .window-controls .button:active {
     background: rgba(255,255,255,0.2);
 }
-  
+
 .header-icon {
     width: 25px;
     height: 25px;
@@ -123,7 +135,7 @@ body, html {
     background: #f1707a !important;
     color: #000;
 }
-  
+
 #restore-button {
     display: none !important;
 }
